# dpic

./: .gitignore  CHANGES  Makefile  Makefile.default  Makefile.in  README  configure  dpic.c  dpictools.pic  entryhp.h  entrytv.h  index.src  lxch.h  lxhp.h  lxnp.h  lxtv.h  p2c.h  p2clib.c  parstab.i  quick.pic
autoconf/: Makefile.in  configure  configure.ac
doc/: Makefile  Spiral.m4  Spiral.pic  Spiral.tex  VERSION  VERSION.tex  Xtest.pic  Xtest.tex  arrow.pic  arrow.tex  circles.pic  circles.tex  dpic-doc.bib  dpic-doc.tex  dpic.1  dpic.1.src  dpic_man.tex  dpicdoc.tex  dpictools.pic  quick.pic  spline.pic  spline.tex  troffman.sty
doc/examples/: Examples.txt  Makefile  README
examples/: Examples.txt  Makefile  README
examples/sources/: arcs.pic  arrowheads.pic  arrows.pic  basictests.pic  diagB.pic  diagC.pic  man.tex  man01.pic  man02.pic  man03.pic  man04.pic  man05.pic  man06.pic  man07.pic  man08.pic  man09.pic  man11.pic  man12.pic  man13.pic  man14.pic  man15.pic  man16.pic  man17.pic  man18.pic  man19.pic  man20.pic  man21.pic  man22.pic  man24.pic  man25.pic  man26.pic  man28.pic  man29.pic  man30.pic  man31.pic  man32.pic  man33.pic  man34.pic  man35.pic  man36.pic  (+5 more)
src/: Makefile  README  dp0.x  dp1.x  dpic.bnf  dpic.x  dpic1.x  dpic2.x  lexremoves  lxcst.v  mfp.x  mkCtables.awk  mkerrs.awk  mkerrtab.awk  mpo.x  p2crc  pdf.x  pgf.x  ps.x  pst.x  svg.x  sysdep.c  sysdep.sed  sysdep.x  tex.x  xfig.x
src/Pgen/src/: Makefile  Makefile.default  Makefile.in  pg.c  pgc.c  pgf.c  pgp.c
src/p2c/src/: Makefile  Makefile.default  Makefile.in  README  decl.c  expr.c  lex.c  makeproto.c  otrans.c  out.c  p2c.cat  p2c.h  p2c.man.inst  p2cc  p2clib.c  parse.c  pexpr.c  (+2 more)
src/pascal/: Makefile  Makefile.default  Makefile.in  README
src/tables/: Makefile  PG.out  nullprods
